--- a/a1/src/app/success-alert/success-alert.component.html
+++ b/a1/src/app/success-alert/success-alert.component.html
@@ -1,3 +1,7 @@
-<p>
-  success-alert works!
+<p class="alert alert-success" role="alert">
+  success-alert works!<br/>
+  <input type="text" [(ngModel)]="myvar"/>
+  {{myvar}}
+  <br/>
+  <input type="text" (input)="parseInput($event)"/> {{myvar2}}
 </p>
