--- a/todomvc/src/app/app.component.html
+++ b/todomvc/src/app/app.component.html
@@ -9,6 +9,7 @@
         <div class="view">
           <input class="toggle" type="checkbox" (click)="toggleTodoComplete(todo)" [checked]="todo.complete">
           <label>{{todo.title}}</label>
+          <label class="text-muted">{{todo.date_created}}</label>
           <button class="destroy" (click)="removeTodo(todo)"></button>
         </div>
       </li>
