--- a/a1/src/app/app.component.html
+++ b/a1/src/app/app.component.html
@@ -4,5 +4,7 @@
   <div class="alert alert-success" role="alert">Alert</div>
   <app-success-alert></app-success-alert>
   <app-warning-alert></app-warning-alert>
+  <app-ass2></app-ass2>
+  <app-ass3></app-ass3>
 </div>
 
