--- a/shoplist/src/app/shoplist/shoplist.component.html
+++ b/shoplist/src/app/shoplist/shoplist.component.html
@@ -1,3 +1,11 @@
-<p>
-  shoplist works!
-</p>
+<div class="row">
+  <div class="col-md-5">
+      <app-shoplist-edit></app-shoplist-edit>
+  </div>
+  <div class="col-md-7">
+      <app-ingredient></app-ingredient>
+  </div>
+</div>
+              
+              
+  
