--- a/shoplist/src/app/shoplist/shoplist.component.html
+++ b/shoplist/src/app/shoplist/shoplist.component.html
@@ -1,8 +1,8 @@
 <div class="row">
-  <div class="col-md-5">
+  <div class="col-xs-10">
       <app-shoplist-edit></app-shoplist-edit>
-  </div>
-  <div class="col-md-7">
+      <hr>
+      <p>The List</p>
       <app-ingredient></app-ingredient>
   </div>
 </div>
